# RVM

./: CMakeLists.txt  LICENSE  README.md  RolangVirtualMachine.sln  readComments.py
RVM/: BaseGC.hpp  CMakeLists.txt  EpsilonGC.cpp  EpsilonGC.hpp  RVM.vcxproj  RVM.vcxproj.filters  STWGC.cpp  STWGC.hpp  StackFrameManager.hpp  VM.cpp  VM.hpp  error.hpp  example.txt  exceptions.hpp  instruction.hpp  instructions.cpp  logging.hpp  loggingSystem.cpp  loggingSystem.hpp  main.cpp  object.hpp  parser.cpp  parser.hpp  scanner.cpp  scanner.hpp  simpleTest.rbc  simpleTest.txt  startupUtils.hpp  tokenizer.cpp  tokenizer.hpp  utils.hpp
docs/: Object representation in RVM.excalidraw
include/argh/: argh.h
tests/: CMakeLists.txt  fileTest.cpp  instructionsTest.cpp  simpleInstructionsTest.cpp  test.cpp  testFunctions.hpp
tests/data/: SimpleObjectAllocation.txt  call_example.txt  factorial.rbc  factorial.txt  fibonacci.txt  fractorial.rbc  fractorial.txt  simpleTest.rbc  simpleTest.txt  simpleTest2.txt
tools/: readComments.py
